# SIAP

./: CMakeLists.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Documents/: SIAP Specification.docx  SIAP Summary.docx
Source/: SIAP.sln
Source/SIAP/: SIAP.vcxproj  SIAP.vcxproj.filters  appsrv.c  appsrv.h  doxymain.h  logger.c  logger.h  server.c  server.h  siap.c  siap.h  siapcommon.h
Source/Server/: Server.vcxproj  Server.vcxproj.filters  appsrv.c  appsrv.h
docs/: _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  appsrv_8h_source.html  classes.html  dir_ff916cf7685b529557b282d19d63cb60.html  dir_ff916cf7685b529557b282d19d63cb60.js  doxygen_crawl.html  doxymain_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  index.js  logger_8h.html  logger_8h.js  logger_8h_source.html  navtreedata.js  navtreeindex0.js  server_8h.html  server_8h.js  server_8h_source.html  siap_8h.html  siap_8h.js  siap_8h_source.html  siapcommon_8h_source.html  structsiap__device__key.html  structsiap__device__key.js  structsiap__device__tag.html  structsiap__device__tag.js  structsiap__key__tag.html  structsiap__server__key.html  structsiap__server__key.js
